--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_image_compress: ^2.1.0
-  
+  path_provider: ^2.1.2
+  archive: ^3.4.10
+  azure_application_insights: ^4.0.1  
 
 dev_dependencies:
   flutter_test:
