--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.1.2
   archive: ^3.4.10
   azure_application_insights: ^4.0.1  
+  global_configuration: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,8 @@ flutter:
   assets:
     - assets/images/
     - assets/test_data/
+    - assets/cfg/app_settings.json
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
