app insights logging complete - no tests yet

--- a/assets/cfg/app_settings.json
+++ b/assets/cfg/app_settings.json
@@ -3,5 +3,9 @@
    "key2": "value2",
    "StorageProviderType": "Local",
    "TempAudioFolder": "audio",
-   "TempImagesFolder": "images"
+   "TempImagesFolder": "images",
+   "UseApplicationInsightsLogging": 1,
+   "UseDartLogging": 1,
+   "AppInsightsInstrumentationKey": "586044d7-f63e-49e2-9735-6e0f9d15884c",
+   "AppInsightsConnectionString": "InstrumentationKey=586044d7-f63e-49e2-9735-6e0f9d15884c;IngestionEndpoint=https://westus2-2.in.applicationinsights.azure.com/;LiveEndpoint=https://westus2.livediagnostics.monitor.azure.com/"
  }
