--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   collection: ^1.18.0
   package_info: ^2.0.2
   device_info: ^2.0.3
+  mockito: ^5.4.4
 
 dev_dependencies:
   coverage: 
