--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   package_info: ^2.0.2
   device_info: ^2.0.3
   mockito: ^5.4.4
+  provider: ^6.1.2
+  uuid: ^4.3.3
 
 dev_dependencies:
   coverage: 
