--- a/luna_mhealth_mobile/pubspec.yaml
+++ b/luna_mhealth_mobile/pubspec.yaml
@@ -45,9 +45,11 @@ dependencies:
   mockito: ^5.4.4
   provider: ^6.1.2
   uuid: ^4.3.3
+  file_picker: ^8.0.0
+  path_to_regexp: ^0.4.0
 
 dev_dependencies:
-  coverage: 
+  coverage:
   flutter_test:
     sdk: flutter
   test:
