--- a/luna_authoring_system/ppt_parser/pubspec.yaml
+++ b/luna_authoring_system/ppt_parser/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   path_provider: ^2.1.3
+  test: ^1.24.9
 
 dev_dependencies:
   flutter_test:
