--- a/luna_authoring_system/ppt_parser/pubspec.yaml
+++ b/luna_authoring_system/ppt_parser/pubspec.yaml
@@ -31,16 +31,20 @@ dependencies:
   flutter:
     sdk: flutter
   archive: ^3.4.10
+  azure_application_insights: ^4.0.1
+  global_configuration: ^2.0.0
   json_annotation: ^4.8.1
   xml: ^6.5.0
   xml2json: ^6.2.3
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   path_provider: ^2.1.3
   test: ^1.24.9
+
+  luna_mhealth_mobile:
+    path: ../../luna_mhealth_mobile
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +75,7 @@ flutter:
 
   assets:
     - assets/Luna_sample_module.pptx
+    - assets/cfg/app_settings.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
