--- a/luna_mhealth_mobile/pubspec.yaml
+++ b/luna_mhealth_mobile/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   uuid: ^4.3.3
   file_picker: ^8.0.0
   path_to_regexp: ^0.4.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   coverage:
