--- a/luna_authoring_system/ppt_parser/pubspec.yaml
+++ b/luna_authoring_system/ppt_parser/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   azure_application_insights: ^4.0.1
   global_configuration: ^2.0.0
   json_annotation: ^4.8.1
+  path: ^1.8.0
   xml: ^6.5.0
   xml2json: ^6.2.3
 
