--- a/luna_mhealth_mobile/pubspec.yaml
+++ b/luna_mhealth_mobile/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   shared_preferences: ^2.2.3
   xml2json: ^6.2.3
 
+  luna_core:
+    path: ../luna_core
+
 dev_dependencies:
   coverage:
   flutter_test:
