--- a/luna_mhealth_mobile/pubspec.yaml
+++ b/luna_mhealth_mobile/pubspec.yaml
@@ -77,7 +77,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    # - assets/images/
     - assets/test_data/
     - assets/cfg/app_settings.json
 
