--- a/luna_authoring_system/pptx_parser/pubspec.yaml
+++ b/luna_authoring_system/pptx_parser/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
   assets:
     - assets/Luna_sample_module.pptx
     - assets/cfg/app_settings.json
+    - assets/Pregnancy-sample.pptx
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
