--- a/luna_authoring_system/pptx_parser/web/manifest.json
+++ b/luna_authoring_system/pptx_parser/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ppt_parser",
-    "short_name": "ppt_parser",
+    "name": "pptx_parser",
+    "short_name": "pptx_parser",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
