--- a/luna_authoring_system/pptx_parser/android/app/src/main/AndroidManifest.xml
+++ b/luna_authoring_system/pptx_parser/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="ppt_parser"
+        android:label="pptx_parser"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
