--- a/luna_authoring_system/pptx_parser/macos/Runner/Configs/AppInfo.xcconfig
+++ b/luna_authoring_system/pptx_parser/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,7 +5,7 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = ppt_parser
+PRODUCT_NAME = pptx_parser
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = com.example.pptParser
