--- a/luna_authoring_system/pptx_parser/windows/CMakeLists.txt
+++ b/luna_authoring_system/pptx_parser/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(ppt_parser LANGUAGES CXX)
+project(pptx_parser LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "ppt_parser")
+set(BINARY_NAME "pptx_parser")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
