Fix pipeline script to point to correct luna_authoring_system folder

--- a/pipelines/pipeline_luna_lint-test.yml
+++ b/pipelines/pipeline_luna_lint-test.yml
@@ -16,7 +16,7 @@ variables:
   - name: lunacore
     value: luna_core
   - name: lunaauthoring
-    value: luna_authoring_system/pptx_parser
+    value: luna_authoring_system
   - name: lunamobile
     value: luna_mobile
 
