--- a/luna_authoring_system/analysis_options.yaml
+++ b/luna_authoring_system/analysis_options.yaml
@@ -1,5 +1,5 @@
 #Use the luna_core analysis_options file
-include: ../../luna_core/analysis_options.yaml
+include: ../luna_core/analysis_options.yaml
 
 linter:
   rules:
