--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -52,3 +52,18 @@ dart_code_linter:
     maximum-nesting-level: 5
   metrics-exclude:
    - '**/test/**'
+  rules:
+   - avoid-passing-async-when-sync-expected
+   - avoid-redundant-async
+   - avoid-unnecessary-type-assertions
+   - avoid-unnecessary-type-casts
+   - avoid-unrelated-type-assertions
+   - avoid-unused-parameters
+   - avoid-nested-conditional-expressions
+   - newline-before-return
+   - no-boolean-literal-compare
+   - no-empty-block
+   - prefer-trailing-comma
+   - no-equal-then-else
+   - prefer-moving-to-variable
+   - prefer-match-file-name
