Change iOS and Android gitignores to what we had before August(except using **/ for top level functionality

--- a/.gitignore
+++ b/.gitignore
@@ -11,28 +11,46 @@
 **/cache/
 **/junk/
 
-# General Android Platform directories to ignore in source code.
-**/android/.gradle/
-**/android/app/build/
-**/android/build/
-**/android/local.properties
-**/android/.settings/
+# Android related
+**/android/**/gradle-wrapper.jar
+.gradle/
 **/android/captures/
-**/android/**/build/
+**/android/gradlew
+**/android/gradlew.bat
+**/android/local.properties
+**/android/**/GeneratedPluginRegistrant.java
+**/android/key.properties
+*.jks
 
-# General iOS Platform directories to ignore in source code.
-**/ios/Flutter/.last_build_id
-**/ios/.symlinks/
-**/ios/Pods/
-**/ios/DerivedData/
+# iOS/XCode related
+**/ios/**/*.mode1v3
+**/ios/**/*.mode2v3
+**/ios/**/*.moved-aside
+**/ios/**/*.pbxuser
+**/ios/**/*.perspectivev3
+**/ios/**/*sync/
+**/ios/**/.sconsign.dblite
+**/ios/**/.tags*
+**/ios/**/.vagrant/
+**/ios/**/DerivedData/
+**/ios/**/Icon?
+**/ios/**/Pods/
+**/ios/**/.symlinks/
+**/ios/**/profile
+**/ios/**/xcuserdata
 **/ios/.generated/
-**/ios/.dart_tool/
-**/ios/Flutter/App.framework/
-**/ios/Flutter/Flutter.framework/
+**/ios/Flutter/.last_build_id
+**/ios/Flutter/App.framework
+**/ios/Flutter/Flutter.framework
 **/ios/Flutter/Flutter.podspec
 **/ios/Flutter/Generated.xcconfig
-**/ios/Runner.xcworkspace/
-**/ios/build/
+**/ios/Flutter/ephemeral
+**/ios/Flutter/app.flx
+**/ios/Flutter/app.zip
+**/ios/Flutter/flutter_assets/
+**/ios/Flutter/flutter_export_environment.sh
+**/ios/ServiceDefinitions.json
+**/ios/Runner/GeneratedPluginRegistrant.*
 
 # macOS Specific
 .DS_Store
