--- a/luna_mobile/assets/cfg/app_settings.json
+++ b/luna_mobile/assets/cfg/app_settings.json
@@ -1,11 +1,11 @@
 {
-   "key1": "value1",
-   "key2": "value2",
-   "StorageProviderType": "Local",
-   "TempAudioFolder": "audio",
-   "TempImagesFolder": "images",
-   "UseApplicationInsightsLogging": true,
-   "UseDartLogging": true,
-   "AppInsightsInstrumentationKey": "586044d7-f63e-49e2-9735-6e0f9d15884c",
-   "AppInsightsConnectionString": "InstrumentationKey=586044d7-f63e-49e2-9735-6e0f9d15884c;IngestionEndpoint=https://westus2-2.in.applicationinsights.azure.com/;LiveEndpoint=https://westus2.livediagnostics.monitor.azure.com/"
- }
+    "AppInsightsConnectionString": "InstrumentationKey=586044d7-f63e-49e2-9735-6e0f9d15884c;IngestionEndpoint=https://westus2-2.in.applicationinsights.azure.com/;LiveEndpoint=https://westus2.livediagnostics.monitor.azure.com/",
+    "AppInsightsInstrumentationKey": "586044d7-f63e-49e2-9735-6e0f9d15884c",
+    "StorageProviderType": "Local",
+    "TempAudioFolder": "audio",
+    "TempImagesFolder": "images",
+    "UseApplicationInsightsLogging": true,
+    "UseDartLogging": true,
+    "key1": "value1",
+    "key2": "value2"
+}
