--- a/luna_core/pubspec.yaml
+++ b/luna_core/pubspec.yaml
@@ -52,12 +52,15 @@ dependencies:
   xml2json: ^6.2.3
 
 dev_dependencies:
+  build_runner: ^2.0.0
+  built_value: ^8.9.2
+  built_value_generator: ^8.4.0
   coverage:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+    # The "flutter_lints" package below contains a set of recommended lints to
+    # encourage good coding practices. The lint set provided by the package is
+    # activated in the `analysis_options.yaml` file located at the root of your
+    # package. See that file for information about deactivating specific lint
+    # rules and activating additional ones.
   dart_code_linter: ^1.1.5
   flutter_lints: ^2.0.0
   flutter_test:
