--- a/luna_authoring_system/pubspec.yaml
+++ b/luna_authoring_system/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
 
 
 dev_dependencies:
+  build_runner: ^2.0.0
+  built_value: ^8.9.2
+  built_value_generator: ^8.4.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
