Moved modules to Start Learning page.  - Moved all learning modules from the Home page to the "Start Learning" page for better content organization.  - Added a "Start Learning" button on the Home page that navigates users to the "Start Learning" page.  - Temporarily added a placeholder image for the "Start Learning" button. This will be replaced with an appropriate image in a future update.  - Added unit tests for: The visibility and navigation functionality of the "Start Learning" button, and ensuring learning modules are correctly displayed on the "Start Learning" page.

--- a/luna_mobile/pubspec.yaml
+++ b/luna_mobile/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
   assets:
     - assets/test_data/
     - assets/cfg/app_settings.json
+    - assets/images/start_learning.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
