add template to pipe_lina_lint-test and add template to luna_lint_test

--- a/pipelines/pipeline_luna_lint-test.yml
+++ b/pipelines/pipeline_luna_lint-test.yml
@@ -23,4 +23,6 @@ steps:
       package_path: ${{ folder }}
       package_name: ${{ folder }}
 
+- template: templates/test_file_existence.yml
+
 - template: templates/publish_test_lint_results.yml
