--- a/luna_core/pubspec.yaml
+++ b/luna_core/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
     path: ../luna_mobile
   mockito: ^5.4.4
   package_info: ^2.0.2
+  package_info_plus: ^8.1.4
   path_provider: ^2.1.2
   path_to_regexp: ^0.4.0
   provider: ^6.1.2
