--- a/luna_authoring_system/pubspec.yaml
+++ b/luna_authoring_system/pubspec.yaml
@@ -1,5 +1,5 @@
 name: luna_authoring_system
-description: "A new Flutter project."
+description: "An authoring system that parses PowerPoint file and compile it into a luna file."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
