--- a/.gitignore
+++ b/.gitignore
@@ -132,5 +132,6 @@ luna_authoring_system/test\\test_output/images
 
 # Specific Paths
 luna_authoring_system/sample
+luna_authoring_system/test/output
 poc_sandboxes/flutter_blue_app/
 
