--- a/pipelines/playground/pipeline_playground.yml
+++ b/pipelines/playground/pipeline_playground.yml
@@ -3,7 +3,7 @@
 trigger: none
 
 pool:
-  vmImage: windows-latest
+  vmImage: macos-latest
 
 variables:
   - name: package_folders
@@ -13,3 +13,5 @@ steps:
 
 - template: ../templates/install_prereqs.yml
 - template: ../templates/run_luna_authoring.yml
+  parameters:
+    operating_system: macos
