--- a/luna_authoring_system/pubspec.yaml
+++ b/luna_authoring_system/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   json_annotation: ^4.8.1
   luna_core:
     path: ../luna_core
+  luna_mobile:
+    path: ../luna_mobile
   path: ^1.8.0
   path_provider: ^2.1.3
   test: ^1.24.9
