--- a/pipelines/playground/pipeline_playground.yml
+++ b/pipelines/playground/pipeline_playground.yml
@@ -11,20 +11,20 @@ variables:
 
 steps:
 
-- template: ./templates/install_prereqs.yml
+- template: ../templates/install_prereqs.yml
 
 - ${{ each folder in split(variables.package_folders, ',') }}:
-  - template: ./templates/lint_luna.yml
+  - template: ../templates/lint_luna.yml
     parameters:
       package_path: ${{ folder }}
       package_name: ${{ folder }}
-  - template: ./templates/run_tests.yml
+  - template: ../templates/run_tests.yml
     parameters:
       package_path: ${{ folder }}
       package_name: ${{ folder }}
 
-- template: ./templates/publish_test_lint_results.yml
+- template: ../templates/publish_test_lint_results.yml
 
-- template: ./templates/run_luna_authoring.yml
+- template: ../templates/run_luna_authoring.yml
   parameters:
     operating_system: macos
