try to use built exe

--- a/pipelines/templates/run_luna_authoring.yml
+++ b/pipelines/templates/run_luna_authoring.yml
@@ -8,6 +8,8 @@ parameters:
   default: 'luna_test'
 - name: operating_system
   default: 'windows'
+- name: use_built_exe
+  default: False
 
 steps:
 
@@ -30,6 +32,7 @@ steps:
 
 - task: PowerShell@2
   displayName: 'Run Luna Authoring System using Flutter'
+  condition: not(${{ parameters.module_name }})
   inputs:
     targetType: 'inline'
     script: |
@@ -40,6 +43,12 @@ steps:
       Start-Sleep 480
       Stop-Process $flutter_proc
 
+- task: PowerShell@2
+  displayName: 'Run built MacOS'
+  condition: use_built_exe
+  script: |
+    cd "$(Build.SourcesDirectory)/luna_authoring_system/build/${{ parameters.build_os }}/runner/Release"
+    Write-Host -InputObject (Get-Item)
 
 - template: test_file_existence.yml
   parameters:
