--- a/pipelines/playground/pipeline_playground.yml
+++ b/pipelines/playground/pipeline_playground.yml
@@ -25,6 +25,9 @@ steps:
 
 - template: ../templates/publish_test_lint_results.yml
 
+- template: ../templates/build_authoring_system.yml
+
 - template: ../templates/run_luna_authoring.yml
   parameters:
     operating_system: macos
+    use_built_exe: True
