--- a/pipelines/playground/pipeline_playground.yml
+++ b/pipelines/playground/pipeline_playground.yml
@@ -34,10 +34,11 @@ steps:
 - template: ../templates/publish_test_lint_results.yml
 
 - template: ../templates/build_authoring_system.yml
-  build_os: $(buildOS)
-  package_name: $(package_name)
-  release_directory: $(release_dir)
-  build_name: $(Build.BuildNumber)
+  parameters:
+    build_os: $(buildOS)
+    package_name: $(package_name)
+    release_directory: $(release_dir)
+    build_name: $(Build.BuildNumber)
 
 - template: ../templates/run_luna_authoring.yml
   parameters:
