--- a/pipelines/templates/run_luna_authoring.yml
+++ b/pipelines/templates/run_luna_authoring.yml
@@ -50,8 +50,8 @@ steps:
     targetType: 'inline'
     script: |
       cd "$(Build.SourcesDirectory)/luna_authoring_system/build/macos/Build/Products/Release"
-      $results = Get-Item -InputObject ./
-      Write-Host $results
+      $results = Get-Item -Path ./
+      Write-Host -object $results
 
 - template: test_file_existence.yml
   parameters:
