--- a/pipelines/templates/run_luna_authoring.yml
+++ b/pipelines/templates/run_luna_authoring.yml
@@ -50,8 +50,10 @@ steps:
     targetType: 'inline'
     script: |
       cd "$(Build.SourcesDirectory)/luna_authoring_system/build/macos/Build/Products/Release"
-      $results = Get-childItem -Path ./
-      Write-Host -object $results
+      $app_path = ./luna_authoring_system.app 
+      $param1 = "${{ parameters.module_name }}"
+      $param2 = "${{ parameters.pptx_path }}"
+      & open $app_path --args $param1 $param2
 
 - template: test_file_existence.yml
   parameters:
