--- a/pipelines/templates/run_luna_authoring.yml
+++ b/pipelines/templates/run_luna_authoring.yml
@@ -50,7 +50,7 @@ steps:
     targetType: 'inline'
     script: |
       cd "$(Build.SourcesDirectory)/luna_authoring_system/build/macos/Build/Products/Release"
-      $app_path = ./luna_authoring_system.app 
+      $app_path = "./luna_authoring_system.app"
       $param1 = "${{ parameters.module_name }}"
       $param2 = "${{ parameters.pptx_path }}"
       & open $app_path --args $param1 $param2
