--- a/pipelines/templates/run_luna_authoring.yml
+++ b/pipelines/templates/run_luna_authoring.yml
@@ -50,7 +50,8 @@ steps:
     targetType: 'inline'
     script: |
       cd "$(Build.SourcesDirectory)/luna_authoring_system/build/macos/Build/Products/Release"
-      $param1 = "${{ parameters.pptx_path }}"
+      Move-Item -Path "${{ parameters.pptx_path }}" -destination "/tmp/luna_test.pptx"
+      $param1 = "/tmp/luna_test.pptx"
       $param2 = "${{ parameters.module_name }}"
       $execPath = "./luna_authoring_system.app/Contents/MacOS/luna_authoring_system"
     
@@ -59,7 +60,7 @@ steps:
         exit 1
       }
 
-      sudo & $execPath $param1 $param2
+      & $execPath $param1 $param2
 
 - template: test_file_existence.yml
   parameters:
