--- a/pipelines/templates/run_luna_authoring.yml
+++ b/pipelines/templates/run_luna_authoring.yml
@@ -50,8 +50,8 @@ steps:
     targetType: 'inline'
     script: |
       cd "$(Build.SourcesDirectory)/luna_authoring_system/build/macos/Build/Products/Release"
-      Copy-Item -Path "${{ parameters.pptx_path }}" -destination "/tmp/luna_test.pptx"
-      $param1 = "/tmp/luna_test.pptx"
+      Copy-Item -Path "${{ parameters.pptx_path }}" -destination "$HOME/Documents/luna_test.pptx"
+      $param1 = "$HOME/Documents/luna_test.pptx"
       $param2 = "${{ parameters.module_name }}"
       $execPath = "./luna_authoring_system.app/Contents/MacOS/luna_authoring_system"
     
