--- a/pipelines/playground/pipeline_playground.yml
+++ b/pipelines/playground/pipeline_playground.yml
@@ -2,33 +2,84 @@
 # Runs unit tests and then integration tests
 
 trigger: none
+# Nightly Build for Luna mHealth
+# Runs unit tests and then integration tests
 
-pool:
-  vmImage: macos-latest
-variables:
-  - name: package_folders
-    value: luna_core,luna_authoring_system,luna_mobile
-  - name: imageName
-    value: macOS-latest
-  - name: buildOS
-    value: macos
-  - name: package_name
-    value: MacBuild_$(Build.BuildNumber)
-  - name: release_dir
-    value: /Build/Products/Release
+jobs:
 
-steps:
+- job: WindowsTests
 
-- template: ../templates/install_prereqs.yml
+  pool:
+    vmImage: windows-latest
+  variables:
+    - name: package_folders
+      value: luna_core,luna_authoring_system,luna_mobile
 
-- template: ../templates/build_authoring_system.yml
-  parameters:
-    build_os: $(buildOS)
-    package_name: $(package_name)
-    release_directory: $(release_dir)
-    build_name: $(Build.BuildNumber)
+  steps:
 
-- template: ../templates/run_luna_authoring.yml
-  parameters:
-    operating_system: macos
-    use_built_exe: True
+  - template: ../templates/install_prereqs.yml
+
+  - ${{ each folder in split(variables.package_folders, ',') }}:
+    - template: ../templates/lint_luna.yml
+      parameters:
+        package_path: ${{ folder }}
+        package_name: ${{ folder }}
+    - template: ../templates/run_tests.yml
+      parameters:
+        package_path: ${{ folder }}
+        package_name: ${{ folder }}
+
+  - template: ../templates/publish_test_lint_results.yml
+
+  - template: ../templates/run_luna_authoring.yml
+    parameters:
+      operating_system: windows
+
+  - template: ../templates/run_luna_mobile_tests_firebase.yml
+    
+
+
+- job: MacOSTests
+
+  pool:
+    vmImage: macos-latest
+  variables:
+    - name: package_folders
+      value: luna_core,luna_authoring_system,luna_mobile
+    - name: imageName
+      value: macOS-latest
+    - name: buildOS
+      value: macos
+    - name: package_name
+      value: MacBuild_$(Build.BuildNumber)
+    - name: release_dir
+      value: /Build/Products/Release
+
+
+  steps:
+
+  - template: ../templates/install_prereqs.yml
+
+  - ${{ each folder in split(variables.package_folders, ',') }}:
+    - template: ../templates/lint_luna.yml
+      parameters:
+        package_path: ${{ folder }}
+        package_name: ${{ folder }}
+    - template: ../templates/run_tests.yml
+      parameters:
+        package_path: ${{ folder }}
+        package_name: ${{ folder }}
+
+  - template: ../templates/publish_test_lint_results.yml
+
+  - template: ../templates/build_authoring_system.yml
+    parameters:
+      build_os: $(buildOS)
+      package_name: $(package_name)
+      release_directory: $(release_dir)
+      build_name: $(Build.BuildNumber)
+
+  - template: ../templates/run_luna_authoring.yml
+    parameters:
+      operating_system: macos
+      use_built_exe: True
