--- a/pipelines/playground/pipeline_playground.yml
+++ b/pipelines/playground/pipeline_playground.yml
@@ -7,38 +7,6 @@ trigger: none
 
 jobs:
 
-- job: WindowsTests
-
-  pool:
-    vmImage: windows-latest
-  variables:
-    - name: package_folders
-      value: luna_core,luna_authoring_system,luna_mobile
-
-  steps:
-
-  - template: ../templates/install_prereqs.yml
-
-  - ${{ each folder in split(variables.package_folders, ',') }}:
-    - template: ../templates/lint_luna.yml
-      parameters:
-        package_path: ${{ folder }}
-        package_name: ${{ folder }}
-    - template: ../templates/run_tests.yml
-      parameters:
-        package_path: ${{ folder }}
-        package_name: ${{ folder }}
-
-  - template: ../templates/publish_test_lint_results.yml
-
-  - template: ../templates/run_luna_authoring.yml
-    parameters:
-      operating_system: windows
-
-  - template: ../templates/run_luna_mobile_tests_firebase.yml
-    
-
-
 - job: MacOSTests
 
   pool:
@@ -53,7 +21,7 @@ jobs:
     - name: package_name
       value: MacBuild_$(Build.BuildNumber)
     - name: release_dir
-      value: /Build/Products/Release
+      value: /Build/Products/Debug
 
 
   steps:
@@ -78,6 +46,7 @@ jobs:
       package_name: $(package_name)
       release_directory: $(release_dir)
       build_name: $(Build.BuildNumber)
+      debug_mode: true
 
   - template: ../templates/run_luna_authoring.yml
     parameters:
