--- a/pipelines/templates/build_authoring_system.yml
+++ b/pipelines/templates/build_authoring_system.yml
@@ -12,6 +12,8 @@ parameters:
   default: "/x64/runner/Release"
 - name: build_name
   default: 0
+- name: debug_mode
+  default: false
 
 steps:
   - task: PowerShell@2
@@ -24,7 +26,11 @@ steps:
         flutter clean
         flutter pub get
         flutter create --platforms=${{ parameters.build_os }} .
-        flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }}
+        if(${{ parameters.debug_mode }} -eq "true"){
+          flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }} --debug
+        }else{
+          flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }}
+        }
   - task: ArchiveFiles@2
     inputs:
       rootFolderOrFile: "$(Build.SourcesDirectory)/luna_authoring_system/build/${{ parameters.build_os }}/${{ parameters.release_directory }}"
