--- a/pipelines/templates/build_authoring_system.yml
+++ b/pipelines/templates/build_authoring_system.yml
@@ -14,6 +14,8 @@ parameters:
   default: 0
 - name: debug_mode
   default: false
+- name: archive_file
+  default: true
 
 steps:
   - task: PowerShell@2
@@ -26,12 +28,14 @@ steps:
         flutter clean
         flutter pub get
         flutter create --platforms=${{ parameters.build_os }} .
+        Write-Host -Object (${{ parameters.debug_mode }})
         if(${{ parameters.debug_mode }} -eq "true"){
           flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }} --debug
         }else{
           flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }}
         }
   - task: ArchiveFiles@2
+    condition: archive_file
     inputs:
       rootFolderOrFile: "$(Build.SourcesDirectory)/luna_authoring_system/build/${{ parameters.build_os }}/${{ parameters.release_directory }}"
       archiveType: 'zip'
