--- a/pipelines/playground/pipeline_playground.yml
+++ b/pipelines/playground/pipeline_playground.yml
@@ -28,18 +28,6 @@ jobs:
 
   - template: ../templates/install_prereqs.yml
 
-  - ${{ each folder in split(variables.package_folders, ',') }}:
-    - template: ../templates/lint_luna.yml
-      parameters:
-        package_path: ${{ folder }}
-        package_name: ${{ folder }}
-    - template: ../templates/run_tests.yml
-      parameters:
-        package_path: ${{ folder }}
-        package_name: ${{ folder }}
-
-  - template: ../templates/publish_test_lint_results.yml
-
   - template: ../templates/build_authoring_system.yml
     parameters:
       build_os: $(buildOS)
@@ -51,4 +39,4 @@ jobs:
   - template: ../templates/run_luna_authoring.yml
     parameters:
       operating_system: macos
-      use_built_exe: True
+      use_built_exe: true
