--- a/pipelines/templates/build_authoring_system.yml
+++ b/pipelines/templates/build_authoring_system.yml
@@ -35,7 +35,7 @@ steps:
           flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }}
         }
   - task: ArchiveFiles@2
-    condition: archive_file
+    condition: ${{ parameters.archive_file }}
     inputs:
       rootFolderOrFile: "$(Build.SourcesDirectory)/luna_authoring_system/build/${{ parameters.build_os }}/${{ parameters.release_directory }}"
       archiveType: 'zip'
