--- a/pipelines/playground/pipeline_playground.yml
+++ b/pipelines/playground/pipeline_playground.yml
@@ -35,6 +35,7 @@ jobs:
       release_directory: $(release_dir)
       build_name: $(Build.BuildNumber)
       debug_mode: true
+      archive_file: false
 
   - template: ../templates/run_luna_authoring.yml
     parameters:
