--- a/pipelines/templates/build_authoring_system.yml
+++ b/pipelines/templates/build_authoring_system.yml
@@ -28,12 +28,15 @@ steps:
         flutter clean
         flutter pub get
         flutter create --platforms=${{ parameters.build_os }} .
+        Write-Host "###########"
         Write-Host -Object (${{ parameters.debug_mode }})
+        Write-Host "#####"
         if(${{ parameters.debug_mode }} -eq "true"){
           flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }} --debug
         }else{
           flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }}
         }
+
   - task: ArchiveFiles@2
     condition: ${{ parameters.archive_file }}
     inputs:
