--- a/pipelines/templates/build_authoring_system.yml
+++ b/pipelines/templates/build_authoring_system.yml
@@ -13,7 +13,7 @@ parameters:
 - name: build_name
   default: 0
 - name: debug_mode
-  default: false
+  default: "false"
 - name: archive_file
   default: true
 
