--- a/pipelines/templates/build_authoring_system.yml
+++ b/pipelines/templates/build_authoring_system.yml
@@ -29,7 +29,8 @@ steps:
         flutter pub get
         flutter create --platforms=${{ parameters.build_os }} .
         Write-Host "###########"
-        Write-Host -Object (${{ parameters.debug_mode }})
+        $test = ${{ parameters.debug_mode }}
+        Write-Host -Object $test
         Write-Host "#####"
         if(${{ parameters.debug_mode }} -eq "true"){
           flutter build ${{ parameters.build_os }} --build-name ${{  parameters.build_name  }} --debug
