update nightly build with changes

--- a/pipelines/pipeline_nightly_build.yml
+++ b/pipelines/pipeline_nightly_build.yml
@@ -69,6 +69,16 @@ jobs:
 
   - template: templates/publish_test_lint_results.yml
 
-  - template: templates/run_luna_authoring.yml
+  - template: .templates/build_authoring_system.yml
+    parameters:
+      build_os: $(buildOS)
+      package_name: $(package_name)
+      release_directory: $(release_dir)
+      build_name: $(Build.BuildNumber)
+      debug_mode: true
+      archive_file: false
+
+  - template: .templates/run_luna_authoring.yml
     parameters:
       operating_system: macos
+      use_built_exe: true
