--- a/pipelines/pipeline_nightly_build.yml
+++ b/pipelines/pipeline_nightly_build.yml
@@ -76,7 +76,7 @@ jobs:
 
   - template: templates/publish_test_lint_results.yml
 
-  - template: .templates/build_authoring_system.yml
+  - template: templates/build_authoring_system.yml
     parameters:
       build_os: $(buildOS)
       package_name: $(package_name)
@@ -85,7 +85,7 @@ jobs:
       debug_mode: true
       archive_file: false
 
-  - template: .templates/run_luna_authoring.yml
+  - template: templates/run_luna_authoring.yml
     parameters:
       operating_system: $(buildOS)
       use_built_exe: true
