--- a/luna_authoring_system/pubspec.yaml
+++ b/luna_authoring_system/pubspec.yaml
@@ -60,6 +60,7 @@ dev_dependencies:
   # rules and activating additional ones.
   dart_code_linter: ^1.1.5
   flutter_lints: ^3.0.0
+  mockito: ^5.4.4
 
   flutter_test:
     sdk: flutter
