--- a/luna_core/pubspec.yaml
+++ b/luna_core/pubspec.yaml
@@ -61,6 +61,8 @@ dev_dependencies:
     # rules and activating additional ones.
   dart_code_linter: ^2.0.0
   flutter_lints: ^5.0.0
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
   test:
